--- a/home/etc/tmuxinator.yml
+++ b/home/etc/tmuxinator.yml
@@ -4,21 +4,26 @@ root: ~
 startup_window: jellyfish
 
 windows:
-  - srv:
+  - srv-jf:
       root: ~/proj/jellyfish
       layout: 1829,304x49,0,0{152x49,0,0,0,151x49,153,0[151x24,153,0,1,151x24,153,25,2]}
       panes:
         - m runserver
         - npm start
         - scripts/notebook orthogonal-networks
-  # - srv2:
-  #     root: ~/proj/jellyfish
-  #     layout: even-horizontal
-  #     panes:
-  #       - # shell
-  #       - # shell
+  - srv-dx:
+      root: ~/proj/devex
+      layout: even-horizontal
+      panes:
+        - m runserver 9000
+        - npm start
   - jellyfish:
       root: ~/proj/jellyfish
+      layout: even-horizontal
+      panes:
+        - # shell
+  - devex:
+      root: ~/proj/devex
       layout: even-horizontal
       panes:
         - # shell
