--- a/home/etc/mise-config.toml
+++ b/home/etc/mise-config.toml
@@ -11,5 +11,5 @@ zig = "0.11.0"
 [settings]
 python_compile = true
 experimental = true
-idiomatic_version_file_enable_tools = ["python"]
+idiomatic_version_file_enable_tools = ["python", "node", "terraform"]
 quiet = true
